assets/scss/_layout.scss
@use "mixins";
@use "variables";

.container {
	display: block;
	margin: 0 auto;
	max-width: 70em;
	padding: 0 3rem;
	@include mixins.clearfix;
}

.header {
	background: variables.$color-white;
	padding: 3rem 0;
}

.logo {
	float: left;
	font-size: 3.2rem;
	font-weight: 300;
	margin: 0;
	line-height: 1;
}

.nav {
	float: right;

	a {
		@extend .logo;
	}
}

.content {
	background: variables.$color-white;
	padding: 7rem 0 0;
	position: relative;
	top: 0;
	left: 0;
	z-index: 1;

	@media (max-width: variables.$breakpoint-medium - 1) {
		padding: 1rem 0 0;
	}

	@media (min-width: variables.$breakpoint-medium) {
		padding: 21rem 0 0;
	}
}

.intro,
.projects {
	padding: 0 0 5rem;
}

.page-layout .projects {
  padding: 0 0 2rem;
}

.intro {
	@media (min-width: variables.$breakpoint-medium) {
		p {
			font-size: 2.7rem;
			max-width: 66.66666%;
		}
	}
}

.projects-list {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1.5rem;
  list-style: none;
  padding: 0;
  margin: 0;

  li {
    margin-bottom: 0;
  }

  a {
    display: block;
    text-decoration: none;
    color: inherit;
  }

  .img-wrapper {
    position: relative;

    &:before {
      content: "View Chart";
      color: var(--color-on-header-text);
      @extend .h2;
      font-weight: 800;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      opacity: 0;
      transition: all .5s ease-in-out .25s;
      z-index: 2;
    }

    &:after {
      background: #000;
      content: "";
      position: absolute;
      inset: 0;
      opacity: 0;
      transition: all .5s ease-in-out;
      z-index: 1;
    }
  }

  a:hover .img-wrapper {
    &:before { opacity: 1; }
    &:after  { opacity: .45; }
  }

  img {
    width: 100%;
    display: block;
    transition: filter .35s ease-in-out;
  }

  span {
    display: block;
  }

  @media (max-width: 900px) {
    grid-template-columns: repeat(2, 1fr);
  }

  @media (max-width: 600px) {
    grid-template-columns: 1fr;
  }
}

.projects-list.masonry {
  display: block;

  li {
    display: inline-block;
    width: calc(33.333% - 1rem);
    margin-right: 1.5rem;
    margin-bottom: 1.5rem;
    vertical-align: top;
  }

  @media (max-width: 900px) {
    li {
      width: calc(50% - 0.75rem);
      margin-right: 1.5rem;
    }
  }

  @media (max-width: 600px) {
    li {
      width: 100%;
      margin-right: 0;
    }
  }
}

html[data-theme="dark"] .module a:hover .img-wrapper {
  &:after { opacity: .15; }

  img {
    filter: brightness(1.08) contrast(1.03);
  }
}


.project {
	left: 0;
	position: relative;
	top: 0;

	@media (min-width: variables.$breakpoint-medium) {
		margin-top: -21rem;

		.article-wrapper {
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
		}
	}

	.container {
		max-width: 100%;
	}

		article {
			margin-bottom: 3rem;

		@media (min-width: variables.$breakpoint-medium) {
			float: right;
			right: 0;
			width: 35%;
				position: absolute;
				right: 10%;
	      p {
	        max-width: 45rem;
	      }
			}
	}

		aside {
		margin-left: -3rem;
		margin-right: -3rem;

		@media (min-width: variables.$breakpoint-small) {
			@include mixins.clearfix;
		}

			@media (min-width: variables.$breakpoint-medium) {
				float: left;
				width: 45%;
	    		padding-left: 10%;
			}
		}

		.project-meta {
			margin: 3rem 0 0;

			@media (min-width: variables.$breakpoint-medium) {
				margin: 3rem 0 0;
				max-width: 100%;
			}

			&:not(.project-meta-compact) .meta-block {
				margin-bottom: 1.3rem;
			}
		}

		.project-meta.project-meta-compact {
			display: grid;
			grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
			align-items: start;
			gap: 2rem 2rem;
		}

		.project-meta.project-meta-compact .meta-block {
			min-width: 0;
			max-width: 100%;
		}

		.project-meta.project-meta-compact .meta-block.meta-block-wide {
			grid-column: 1 / -1;
		}

		.project-meta.project-meta-compact .meta-block .h2 {
			margin-top: 0;
		}

		.project-meta.project-meta-compact .meta-block p:last-child {
			padding-bottom: 0;
		}

		.h2 {
	    margin: 1.2rem 0 0.5rem;
			&:first-of-type {
				margin-top: 0;
		}
	}

	h1 {
		a {
			text-decoration: underline;
		}
	}

	li {
		margin-bottom: 0rem;

		&:last-child {
			margin-bottom: 0;
		}
	}

	img {
		width: 100%;
	}
}
.project-navigation {
	background: variables.$color-white;
	padding: 5rem 0;

	a {
		color: variables.$color-black-light;
		display: inline-block;
		text-decoration: none;


		&:hover {
			h2:after {
				visibility: visible;
				-webkit-transform: scaleX(1);
				transform: scaleX(1);
			}

			&.prev {
				span {
					left: 7px;
				}
			}

			span {
				&:after {
					left: 7px;
				}

				&:before {
					left: -7px;
				}
			}
		}

		&:nth-of-type(1),
		&:nth-of-type(2) {
			display: table;
			margin: 0 auto;
			text-align: center;

			@media (min-width: variables.$breakpoint-xsmall) {
				display: inline-block;
				margin: 0;
				text-align: left;
			}
		}

		&:nth-of-type(1) {
			@media (min-width: variables.$breakpoint-xsmall) {
				float: left;
			}
		}

		&:nth-of-type(2) {
			margin-top: 3rem;

			@media (min-width: variables.$breakpoint-xsmall) {
				float: right;
				margin-top: 0;
			}
		}

		&.next {
			span {
				text-align: right;
				&:after {
					content: "\02192";
				}
			}
		}

		&.prev {
			span {
				position: relative;
				left: 0;
				-webkit-transition: all .3s ease-in-out 0s;
				transition: all .3s ease-in-out 0s;

				&:before {
					content: "\02190";
				}
			}
		}
	}

	span {
		&:after,
		&:before {
			position: relative;
			left: 0;
			-webkit-transition: all .3s ease-in-out 0s;
			transition: all .3s ease-in-out 0s;
		}
	}

	h2 {
		display: inline-block;
		font-size: 1.8rem;
		position: relative;

		&:after {
			content: "";
			position: absolute;
			width: 100%;
			height: 1px;
			bottom: -4px;
			left: 0;
			background-color: variables.$color-border;
			visibility: hidden;
			-webkit-transform: scaleX(0);
			transform: scaleX(0);
			-webkit-transition: all .3s ease-in-out 0s;
			transition: all .3s ease-in-out 0s;
		}
	}
}


.footer {
	background: var(--color-footer-bg);
	bottom: 0;
	left: 0;
	padding: 5rem 0;
	right: 0;
	z-index: -1;

	h2, p {
		color: var(--color-on-header-text);
	}

	li,
	span {
		color: var(--color-on-header-text);
	}

	a,
	a:visited,
	a:hover,
	a:active {
		color: var(--color-on-header-text);
	}
}

.footer-blocks {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	gap: 2.4rem 3rem;
	margin: 0 auto;
	max-width: 70em;
	padding: 0 3rem;
}

.footer-block {
	flex: 1 1 100%;
	max-width: 100%;
	min-width: 0;

	@media (min-width: variables.$breakpoint-small) {
		flex: 1 1 calc(50% - 1.5rem);
		max-width: calc(50% - 1.5rem);
	}

	@media (min-width: variables.$breakpoint-large) {
		flex: 1 1 calc(33.333% - 2rem);
		max-width: calc(33.333% - 2rem);
	}
}

.footer-block-title {
	margin-bottom: 0.8rem;
}

.footer-block-list {
	list-style: none;
	margin: 0;
	padding: 0;
}

.footer-block-item {
	font-size: 1.8rem;
	margin-bottom: 0.7rem;
	word-break: break-word;

	&:last-child {
		margin-bottom: 0;
	}
}

.footer-email-row {
	align-items: center;
	display: inline-flex;
	flex-wrap: wrap;
	gap: 0.8rem;
	white-space: normal;
}

.footer-email-link {
	color: var(--color-on-header-text);
	text-decoration: none;
}

.footer-email-copy {
	background: rgba(255, 255, 255, 0.08);
	border: 1px solid rgba(255, 255, 255, 0.3);
	border-radius: 3px;
	color: var(--color-on-header-text);
	cursor: pointer;
	font-family: variables.$font-lekton;
	font-size: 1.2rem;
	letter-spacing: 0.08rem;
	line-height: 1;
	padding: 0.35rem 0.55rem;
	text-transform: uppercase;
	flex: 0 0 auto;
}

.footer-email-copy:hover,
.footer-email-copy:focus-visible {
	background: rgba(255, 255, 255, 0.2);
	outline: none;
}

.footer-email-copy-feedback {
	color: var(--color-on-header-muted);
	font-size: 1.2rem;
	opacity: 0;
	transition: opacity 160ms ease;
}

.footer-email-copy-feedback.visible {
	opacity: 1;
}

.footer-edit-link-row {
	margin: 2.8rem auto 0;
	max-width: 70em;
	padding: 0 3rem;
	text-align: left;
}

.footer-edit-link,
.footer-edit-link:visited {
	color: var(--color-on-header-muted) !important;
	font-size: 1.2rem;
	opacity: 0.65;
	text-decoration: none;
}

.footer-edit-link:hover,
.footer-edit-link:focus-visible {
	color: var(--color-on-header-muted) !important;
	opacity: 0.95;
	text-decoration: underline;
}

.obfuscate-email {
  color: var(--color-on-header-text);
  display: inline-block;
  direction: rtl;
  unicode-bidi: bidi-override;
  white-space: nowrap;
  word-break: normal;
}

.contact,
.follow {
  font-size: 1.8rem;
  h2 {
    margin-bottom: 0.8rem;
  }
	@media (min-width: variables.$breakpoint-medium) {
		float: left;
		margin-bottom: 0;
		width: 50%;
	}
}

.contact,
.follow {
	margin-bottom: 3rem;
}

/* Area Page Links in Header */
.header-links {
  display: flex;
  align-items: center;
}

.header-links a {
  position: relative;
  font-size: 1.8rem;
  padding: 5px;
  margin: 0;
}

.header-links a:not(:first-child)::before {
  content: "";
  position: absolute;
  left: -0.75rem;
  top: 50%;
  transform: translateY(-50%);
  width: 2px;
  height: 1.2em;
  background-color: var(--color-on-header-text);
}

.arrow-div {
  margin-bottom: 1rem;
}

.page-layout .arrow-div {
  margin-bottom: 2.5rem;
}

.item-layout .arrow-div {
  margin-bottom: 1.5rem;
}

/* Constrain image width in project aside for large screens */
@media (min-width: variables.$breakpoint-large) {
  .project aside .img-wrapper-2 {
    max-width: 50em;
    margin-left: auto;
    margin-right: 0;
  }
}

@media (max-width: variables.$breakpoint-xsmall) {
  .logo-and-title-container {
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;
  }
}

